syntax = "proto3";
option csharp_namespace = "CecoChat.Contracts.Client";
package CecoChat.Contracts.Client;
import "client-message.proto";

service Listen {
  rpc Listen(ListenRequest) returns (stream ListenResponse);
}

message ListenRequest {
}

message ListenResponse {
  ClientMessage message = 1;
  int32 sequence_number = 2;
}
